# employee-engagement-pulse

./: .gitignore  README.md
.cursor/rules/: full-stack-rules.mdc
backend/: .env.example  README.md  localhost-cert.pem  localhost-key.pem  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: dashboard.py  health.py  insights.py  metrics.py  slack.py
backend/app/core/: config.py  logging.py
backend/app/models/: pydantic_types.py
backend/app/services/: _state.json  analytics_service.py  anthropic_service.py  dashboard_service.py  insights_service.py  metrics_service.py  slack_service.py  state_store.py
backend/db/prisma/: schema.prisma
backend/scripts/: debug_anthropic.py
backend/tests/: conftest.py  test_anthropic_service.py  test_dashboard.py  test_health.py  test_insights.py  test_slack.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Navbar.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/dashboard/: BurnoutLineChart.tsx  ChannelMetricsTable.tsx  DashboardSummary.tsx  HeatmapMatrix.tsx  SentimentTrendChart.tsx  TimeRangeSelector.tsx
frontend/src/components/ui/: button.tsx  (+1 more)
frontend/src/hooks/: useInsights.ts  useMetrics.ts
frontend/src/lib/: metrics.ts  slack.ts
frontend/src/mocks/: dashboard.ts  insights.ts  metrics.ts  slack.ts
frontend/src/types/: dashboard.ts  insights.ts  metrics.ts  slack.ts
(+17 files in other folders)
