[tool.poetry]
name = "employee-pulse-backend"
version = "0.1.0"
description = "Backend for Employee Pulse"
authors = ["Team <dev@example.com>"]
readme = "README.md"
packages = [
	{ include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
anthropic = "^0.39.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
black = "^24.4.2"
isort = "^5.13.2"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"