[tool.poetry]
name = "employee-pulse-backend"
version = "0.1.0"
description = "Employee Pulse backend API (FastAPI)"
authors = ["Employee Pulse Team <dev@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
prisma = "^0.13.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
ruff = "^0.5.6"
black = "^24.8.0"
isort = "^5.13.2"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
